snapshot update